--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<link rel="icon" type="image/png" href="favicon.ico.png">
+0<head>
     <meta charset="UTF-8">
     <title>Asistente Conversacional UIS - Historia y Servicios</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
